configure prettier, eslint, tslint

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "gop.js",
   "scripts": {
+    "lint": "eslint './src/**/*.ts'",
+    "lint:fix": "eslint './src/**/*.ts' --fix",
     "test": "jest"
   },
   "author": "",
@@ -13,13 +15,14 @@
     "@babel/preset-env": "*",
     "@babel/preset-typescript": "*",
     "@types/jest": "*",
+    "@typescript-eslint/eslint-plugin": "^1.6.0",
     "@typescript-eslint/parser": "^1.6.0",
     "babel-jest": "*",
     "eslint": "^5.16.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.16.0",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-prettier": "^3.0.1",
     "jest": "*",
-    "prettier": "1.16.4"
+    "prettier": "^1.16.4"
   },
   "dependencies": {
     "typescript": "*"
